# RME

./: CMakeLists.txt
.github/workflows/: build-windows.yml
data/: menubar.xml
source/: editor.cpp  editor.h  main_menubar.cpp  main_menubar.h  settings.cpp
